# fastapi-all-that-metadata

./: README.md  main.py  metadata_service.py  pyproject.toml  requirements.txt
static/: app.js  index.html  styles.css
